--- a/angular.json
+++ b/angular.json
@@ -57,8 +57,14 @@
                   "maximumError": "5mb"
                 }
               ]
-            },
-            "ci": {
+            },"local": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.local.ts"
+                }
+              ]
+            },"ci": {
               "progress": false
             }
           }
@@ -71,6 +77,8 @@
           "configurations": {
             "production": {
               "browserTarget": "app:build:production"
+            },"local": {
+              "browserTarget": "app:build:local"
             },
             "ci": {
               "progress": false
