--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,12 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": [
+              "src/theme/variables.scss"
+              , "src/global.scss"
+              , {
+                "input": "node_modules/animate.css/animate.min.css"
+              }],
             "scripts": []
           },
           "configurations": {
